--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,16 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "react-hook-form": "^7.43.9",
+    "next": "14.1.3",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
