--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "i": "^0.3.7",
+    "mysql2": "^3.9.2",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "react": "^18",
